--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase-tools": "^8.6.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "tslib": "^2.0.0"
   }
 }
