--- a/soundcloud/package.json
+++ b/soundcloud/package.json
@@ -10,6 +10,7 @@
     "firebase": "^7.17.1",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
+    "react-audio-player": "^0.13.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
