--- a/soundcloud/package.json
+++ b/soundcloud/package.json
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "firebase": "^7.17.1",
-    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-audio-player": "^0.13.0",
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
